--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -32,6 +32,7 @@ jobs:
 
       # 3) 依存解決 & ビルド
       - name: Install deps & build
+        working-directory: ./frontend
         run: |
           npm ci
           npx vite build
@@ -48,7 +49,7 @@ jobs:
       # 5) S3 へ同期
       - name: Sync to S3
         run: |
-          aws s3 sync ./dist s3://${{ env.BUCKET_NAME }} \
+          aws s3 sync ./frontend/dist s3://${{ env.BUCKET_NAME }} \
             --delete \
             --exclude '.DS_Store' \
             --cache-control 'public,max-age=31536000,immutable' \
