--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -52,6 +52,6 @@ jobs:
         run: |
           aws s3 sync ./frontend/dist s3://${{ env.BUCKET_NAME }} \
             --delete \
-            --exclude '.DS_Store' \
+            --exclude 'public/*' \
             --cache-control 'public,max-age=31536000,immutable' \
             --follow-symlinks
