Set index.html to no-cache in deployment workflow

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -16,6 +16,7 @@ env:
   AWS_REGION: ${{ secrets.AWS_REGION }}
   BUCKET_NAME: ${{ secrets.BUCKET_NAME }}
   AWS_ROLE: ${{ secrets.AWS_ROLE }}
+  CLOUDFRONT_DISTRIBUTION_ID: ${{ secrets.CLOUDFRONT_DISTRIBUTION_ID }}
 
 jobs:
   build-and-deploy:
@@ -53,5 +54,18 @@ jobs:
           aws s3 sync ./frontend/dist s3://${{ env.BUCKET_NAME }} \
             --delete \
             --exclude 'public/*' \
+            --exclude 'index.html' \
             --cache-control 'public,max-age=31536000,immutable' \
-            --follow-symlinks
+
+      # 6) index.html のみ no-cache で上書きアップロード
+      - name: Upload index.html with no-cache
+        run: |
+          aws s3 cp ./frontend/dist/index.html s3://${{ env.BUCKET_NAME }}/index.html \
+            --cache-control "no-cache, must-revalidate"
+
+      # 7) CloudFrontのindex.htmlキャッシュを無効化
+      - name: Invalidate CloudFront index.html
+        run: |
+          aws cloudfront create-invalidation \
+            --distribution-id ${{ env.CLOUDFRONT_DISTRIBUTION_ID }} \
+            --paths "/index.html"
