--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,6 +25,7 @@
     "pinia-plugin-persistedstate": "^4.2.0",
     "pmtiles": "^4.3.0",
     "proj4": "^2.15.0",
+    "shpjs": "^6.1.0",
     "tailwindcss": "^4.0.12",
     "terra-draw": "^1.2.0",
     "terra-draw-maplibre-gl-adapter": "^1.0.1",
