--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
     "@tailwindcss/vite": "^4.0.12",
     "@turf/geojson-rbush": "^7.2.0",
     "@turf/turf": "^7.2.0",
+    "dexie": "^4.2.0",
     "fast-png": "^6.3.0",
     "geotiff": "^2.1.3",
     "maplibre-gl": "^5.2.0",
