--- a/.github/workflows/deploy-dev.yml
+++ b/.github/workflows/deploy-dev.yml
@@ -9,6 +9,7 @@ permissions:
 
 env:
   VITE_API_URL: ${{ vars.VITE_API_URL }}
+  VITE_API_ISOXML_URL: ${{ vars.VITE_API_ISOXML_URL }}
   VITE_PMTILES_URL: ${{ vars.VITE_PMTILES_URL }}
   VITE_OM_MAP_URL: ${{ vars.VITE_OM_MAP_URL }}
   VITE_MAPTILER_KEY: ${{ secrets.VITE_MAPTILER_KEY }}
