--- a/frontend/package.json
+++ b/frontend/package.json
@@ -49,6 +49,7 @@
     "jsdom": "^25.0.1",
     "npm-run-all2": "^7.0.1",
     "prettier": "^3.3.3",
+    "rollup-plugin-visualizer": "^6.0.5",
     "typescript": "~5.6.3",
     "vite": "^6.0.1",
     "vite-plugin-vue-devtools": "^7.6.5",
